fix(student-dash): update to Error message dark mode message UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 * {
-  @apply transition-colors duration-100 dark:bg-gray-900
+  @apply transition-colors duration-100
 }
 
 .input {
